# workerlink

./: .gitignore  Cargo.toml  LICENCE  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
src/: auth.rs  authentication.rs  kv.rs  lib.rs  messages.rs
src/api/: requests.rs  responses.rs
src/interface/: bundle.rs
src/models/: link.rs  mod.rs  shortlink.rs
src/storage/: cloudflare_kv_driver.rs  cloudflare_storage_driver.rs  mod.rs
static/: favicon.psd  index.html
