[package]
name = "shortlink-cf"
authors = ["Blooym"]
description = "A simple link redirect service"
repository = "https://github.com/Blooym/shortlink-cf"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.77"
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = { version = "2.5.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
