[package]
name = "workerlink"
authors = ["Blooym"]
description = "A simple link redirect service"
repository = "https://github.com/Blooym/workerlink"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

# This may be required when working on MacOS
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
url = { version = "2.5.2", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
worker = { version = "0.4.2" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
